--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -641,3 +641,81 @@ footer li {
 #progress_meter h2 {
 	padding-top: 20px;
 }
+
+/* Calculadora */
+
+#t_calculadora, #t_calculadora td{
+	padding: 15px;
+}
+
+#t_calculadora{
+	float: left;
+	margin-right: 20px;
+	text-align: center;
+}
+
+#result_calc{
+	float: left;
+}
+
+#t_calculadora td {
+	width: 30px;
+	height: 30px;
+}
+
+#t_calculadora div {
+	width: 100%;
+	height: 100%;
+	padding: 10px 10px;
+}
+
+#t_calculadora div:hover{
+	cursor: pointer;
+}
+
+#calculadora .numeros{
+	background-color: rgb(182, 179, 179);
+	border-radius: 15px;
+}
+
+#calculadora .operador{
+	background-color: rgb(150, 150, 181);
+	border-radius: 15px;
+}
+#calculadora .btn_igual{
+	background-color: rgb(236, 128, 128);
+	border-radius:15px;
+}
+
+#calculadora .numeros:hover{
+	background-color: rgb(144, 143, 143);
+	border-radius: 15px;
+}
+
+#calculadora .numeros:active{
+	background-color: rgb(68, 68, 68);
+	color: white;
+	border-radius: 15px;
+}
+
+#calculadora .operador:hover{
+	background-color: rgb(113, 113, 150);
+	border-radius: 15px;
+}
+
+#calculadora .operador:active{
+	background-color: rgb(52, 52, 103);
+	border-radius: 15px;
+	color: white;
+}
+
+#calculadora .btn_igual:hover{
+	background-color: rgb(208, 67, 67);
+	border-radius:15px;
+}
+
+#calculadora .btn_igual:active{
+	background-color: rgb(136, 18, 18);
+	border-radius:15px;
+	color: white;
+}
