--- a/WebContent/css/styles.css
+++ b/WebContent/css/styles.css
@@ -661,15 +661,13 @@ footer li {
 }
 
 #t_calculadora td {
-	width: 30px;
-	height: 30px;
-	padding: 15px;
+	padding: 5px 30px 5px 5px;
 }
 
 #t_calculadora div {
 	width: 100%;
 	height: 100%;
-	padding: 10px 10px;
+	padding: 10px 12px;
 }
 
 #t_calculadora div:hover{
